src/objects/NA_LEOM__c.object
<CustomObject>
    <description>Needs Assessment Section - Life Events Other Milestones</description>
    <fields>
        <fullName>College_Plan__c</fullName>
        <label>College Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>College_Timeframe__c</fullName>
        <label>College Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <description>Planning for college?
Yes, No, Not Interested, Prefer Not to Answer</description>
        <inlineHelpText>Are you planning for college?</inlineHelpText>
        <label>College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Improvement_Plan__c</fullName>
        <label>Home Improvement Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Improvement_Timeframe__c</fullName>
        <label>Home Improvement Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Improvement__c</fullName>
        <description>Planning a Home Improvement
Yes, No, Not Interested, Prefer Not to Answer</description>
        <inlineHelpText>Are you planning a Home Improvement?</inlineHelpText>
        <label>Home Improvement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Events_Plan__c</fullName>
        <label>Life Events Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Events_Timeframe__c</fullName>
        <label>Life Events Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Events__c</fullName>
        <description>Planning for life events?
Yes, No, Not Interested, Prefer Not to Answer</description>
        <inlineHelpText>Are you planning for life events such as weddings, etc.?</inlineHelpText>
        <label>Life Events</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Plan__c</fullName>
        <label>Medical Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Timeframe__c</fullName>
        <label>Medical Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <description>Planning for medical expenses?
Yes, No, Not Interested, Prefer Not to Answer</description>
        <inlineHelpText>Are you planning for medical expenses?</inlineHelpText>
        <label>Medical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NA__c</fullName>
        <label>NA</label>
        <referenceTo>Needs_Assesment__c</referenceTo>
        <relationshipName>Needs_Assessment_Recommendations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Plan__c</fullName>
        <label>Other Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Timeframe__c</fullName>
        <label>Other Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>Planning for other unexpected expenses?
Yes, No, Not Interested, Prefer Not to Answer</description>
        <inlineHelpText>Are you planning for other unexpected expenses?</inlineHelpText>
        <label>Other</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_RV_Boat_Plan__c</fullName>
        <label>Purchase RV/Boat Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_RV_Boat_Timeframe__c</fullName>
        <label>Purchase RV/Boat Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_RV_Boat__c</fullName>
        <description>Planning to purchase a RV or boat?
Yes, No, Not Interested, Prefer Not to Answer</description>
        <inlineHelpText>Are you planning to purchase a RV or boat?</inlineHelpText>
        <label>Purchase RV/Boat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec1_Outcome__c</fullName>
        <defaultValue>&quot;Not Presented&quot;</defaultValue>
        <label>Rec1_Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Presented</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Interested soon</fullName>
                </value>
                <value>
                    <fullName>Interested at a later date</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
                <value>
                    <fullName>Informed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec2_Outcome__c</fullName>
        <defaultValue>&quot;Not Presented&quot;</defaultValue>
        <label>Rec2_Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Presented</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Interested soon</fullName>
                </value>
                <value>
                    <fullName>Interested at a later date</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
                <value>
                    <fullName>Informed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec3_Outcome__c</fullName>
        <defaultValue>&quot;Not Presented&quot;</defaultValue>
        <label>Rec3_Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Presented</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Interested soon</fullName>
                </value>
                <value>
                    <fullName>Interested at a later date</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
                <value>
                    <fullName>Informed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retirement_Plan__c</fullName>
        <label>Retirement Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retirement_Timeframe__c</fullName>
        <label>Retirement Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retirement__c</fullName>
        <description>Planning to retire?
Yes, No, Not Interested, Prefer Not to Answer</description>
        <inlineHelpText>Are you planning to retire?</inlineHelpText>
        <label>Retirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicator to show disposition of the section as new(no questions answered), partial (some questions answered) or complete(all questions answered)</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Plan__c</fullName>
        <label>Travel Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Timeframe__c</fullName>
        <label>Travel Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_Timeframe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel__c</fullName>
        <description>Planning for travel expenses?
Yes, No, Not Interested, Prefer Not to Answer</description>
        <inlineHelpText>Are you planning for travel expenses?</inlineHelpText>
        <label>Travel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rec10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>rec10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rec1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>\</description>
        <label>rec1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rec2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>rec2</label>
        <type>Checkbox</type>
    </fields>
    <label>NA Life Events Other Milestones</label>
    <nameField>
        <displayFormat>NALEOM{000000000}</displayFormat>
        <label>Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NA Life Events Other Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>